--- a/frontend/mon-app/package.json
+++ b/frontend/mon-app/package.json
@@ -29,6 +29,7 @@
     "react-loader-spinner": "^4.0.0",
     "react-loading": "^2.0.3",
     "react-modal": "^3.14.3",
+    "react-paginate": "^8.1.2",
     "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
