--- a/frontend/mon-app/package.json
+++ b/frontend/mon-app/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "DatePicker": "^2.0.0",
     "antd": "^4.16.10",
     "axios": "^0.21.1",
     "chart.js": "^3.5.1",
@@ -23,6 +24,7 @@
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-chartjs-2": "^3.0.4",
+    "react-datepicker": "^4.7.0",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
