--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "moment": "^2.29.1",
     "mongoose": "^5.13.5",
     "multer": "^1.4.3",
-    "multer-gridfs-storage": "^5.0.1"
+    "multer-gridfs-storage": "^5.0.1",
+    "nodemailer": "^6.7.5",
+    "nodemailer-express-handlebars": "^5.0.0"
   }
 }
