--- a/frontend/mon-app/package.json
+++ b/frontend/mon-app/package.json
@@ -14,7 +14,8 @@
     "DatePicker": "^2.0.0",
     "antd": "^4.16.10",
     "axios": "^0.21.1",
-    "chart.js": "^3.5.1",
+    "chart.js": "^3.7.1",
+    "chartjs-plugin-datalabels": "^2.0.0",
     "dateformat": "^4.5.1",
     "google-map-react": "^2.1.10",
     "jsonwebtoken": "^8.5.1",
